# StudyCode

./: .gitignore  README.md  temp  temp.md
BinaryFile/: BinaryFile.cpp  CopyFiile.aps  CopyFiile.vcxproj  CopyFiile.vcxproj.filters  CopyFile.cpp  CopyFile.h  README.md
C++ Documents/02-游戏服务器(最终版本)/: AOI_World.cpp  AOI_World.h  GameChannel.cpp  GameChannel.h  GameProtocol.cpp  GameProtocol.h  GameRole.cpp  GameRole.h  RandomName.h  ZinxTimer.cpp  ZinxTimer.h  ZinxTimerDeliver.cpp  ZinxTimerDeliver.h  sh02Project.vcxproj  test.cpp
C++ Documents/02-游戏服务器(机器人版本)/: GameMsg.cpp  GameMsg.h  GameRobot.cpp  GameRobot.h  GameRole.cpp  GameRole.h  RandomName.cpp  WorldManager.cpp  WorldManager.h  ZinxTCP.cpp  msg.pb.cpp  msg.pb.h  sh02Project.sln  sh02Project.vcxproj  test.cpp  utils.cpp  zinx.h
DesignPattern/: Readme.md
DesignPattern/AbstractFactory/: AbstractFactory.hpp  CMakeLists.txt  Products.hpp  main.cpp
DesignPattern/Factory/: CMakeLists.txt  Factory.cpp  Factory.h  main.cpp
DesignPattern/SimpleFactory/: CMakeLists.txt  SimpleFactory.cpp  SimpleFactory.h  main.cpp
DesignPattern/SingletonFactory/: CMakeLists.txt  Singleton.hpp  SingletonEarlyInit.hpp  SingletonLazyInit.hpp  SingletonThreadSafe.hpp  main.cpp
HTML5-UM-coursera/: first-new-page.html
IO复用服务器demo/: epoll_pipe.cpp  epoll_server.cpp  select_server.cpp
SM3&4/: Readme.md
makeAnkiCards/: 538Words.apkg  538考点词cards.csv  cards.csv  makeAnkiCards.py
resumbler/: LC301 - Shortcut.lnk  PattPatelCh01.ppt  PattPatelCh02.ppt  PattPatelCh03.ppt  Source.txt
synonymem/: config.ini  synonymem.py  words.txt
(+369 files in other folders)
